# UEFA-Euro-simulator

./: CMakeLists.txt  README.md  main.cpp
apps/: main.cpp
data/: formations.csv  formations.txt  group_stage_schedule.txt  groups.txt  national_teams.txt
data/players/: albania.txt  austria.txt  belgium.txt  croatia.txt  czech_republic.txt  denmark.txt  england.txt  georgia.txt  germany.txt  hungary.txt  italy.txt  netherlands.txt  portugal.txt  romania.txt  scotland.txt  serbia.txt  slovakia.txt  slovenia.txt  spain.txt  switzerland.txt  turkey.txt  ukraine.txt
docs/: class diagram.drawio
include/: Euro.hpp  Formation.hpp  Group.hpp  Injury.hpp  MatchStage.hpp  NationalTeam.hpp  Nationality.hpp  Player.hpp  Schedule.hpp
include/match/: Match.hpp  MatchStatistics.hpp
include/national_team/: NationalTeam.hpp
include/national_team/statistics/: GroupStatistics.hpp  KnockoutStageStatistics.hpp  Statistics.hpp
include/player/: Attacker.hpp  Defender.hpp  Goalkeeper.hpp  Injury.hpp  Midfielder.hpp  Player.hpp  PlayerStatistics.hpp  Position.hpp
include/squad/: FormationsManager.hpp  Squad.hpp
include/utils/: TextUtils.hpp
src/: Euro.cpp  Group.cpp  Injury.cpp  NationalTeam.cpp  Player.cpp  Schedule.cpp
src/match/: Match.cpp  MatchStatistics.cpp
src/national_team/: NationalTeam.cpp
src/national_team/statistics/: GroupStatistics.cpp  KnockoutStageStatistics.cpp  Statistics.cpp
src/player/: Attacker.cpp  Defender.cpp  Goalkeeper.cpp  Injury.cpp  Midfielder.cpp  Player.cpp
src/squad/: FormationsManager.cpp  Squad.cpp
